--- a/ListList.Web/src/styles/components/_list-node.scss
+++ b/ListList.Web/src/styles/components/_list-node.scss
@@ -1,6 +1,16 @@
 .list-node {
+  &.root {
+    margin: 1em 0;
+  }
+
   &.parent {
     border: 1px solid var(--node-border-color);
+  }
+
+  &.pending {
+    .node-left svg {
+      padding: 0 1px;
+    }
   }
 
   & + .list-node {
@@ -39,9 +49,6 @@
       display: flex;
       align-items: center;
     }
-  }
-
-  .node-body {
   }
 }
 
