--- a/ListList.Web/src/styles/views/_app.scss
+++ b/ListList.Web/src/styles/views/_app.scss
@@ -10,8 +10,6 @@ body,
 }
 
 main {
-  margin-top: 1em;
-
   flex: 1;
   overflow-x: auto;
 }
